# basic_multi_agent_sysem_demo

./: .gitignore  pyproject.toml
src/company_research_agent/: activities.py  company_research_tools.py  config.py  run.py  worker.py  workflow.py
src/docs/: README.md
src/resources/: test.py
src/resources/myprompts/: __init__.py  bundle.py  history.py  models.py  provider.py  registry.py
src/resources/mytools/: decorators.py  registry.py  schemas.py
src/supervisor_agent/: activities.py  agent_types.py  config.py  langchain_version.py  run.py  tools.py  worker.py  workflow.py
