[project]
name = "basic-multi-agent-sysem-demo"
version = "0.1.0"
description = "Add your description here"
readme = "src/docs/README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "google>=3.0.0",
    "google-genai>=1.59.0",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "temporalio>=1.21.1",
    "uuid>=1.30",
]
